# Internship-Project-Data-Driven-Financial-Planning-Risk-Analysis

./: .gitignore  ELIPS_FINANCIAL_PLANNER_TODO_LIST.md  LICENSE  readme.md
ElipsFinancialPlanner/: .gitignore  README.md  __init__.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.sh
ElipsFinancialPlanner/config/: settings.yaml
ElipsFinancialPlanner/data/: sales_history.cleaned.csv
ElipsFinancialPlanner/data/raw/: sales_history.raw.csv
ElipsFinancialPlanner/docs/: DATA_DICTIONARY.md
ElipsFinancialPlanner/outputs/: forecast_summary.txt
ElipsFinancialPlanner/outputs/reports/: executive_summary.txt
ElipsFinancialPlanner/outputs/risk/: monte_carlo_analysis.json
ElipsFinancialPlanner/outputs/scenarios/: base_financial_plan.csv  best_financial_plan.csv  cost_cut_financial_plan.csv  fx_shock_financial_plan.csv  moderate_growth_financial_plan.csv  optimistic_financial_plan.csv  recession_financial_plan.csv  recovery_financial_plan.csv  scenario_comparison.csv  scenario_insights.json  stress_financial_plan.csv
ElipsFinancialPlanner/src/: __init__.py  cli.py  config.py  data_cleaning.py  data_loader.py  eda.py  financial_planner.py  forecasting.py  logger.py  main.py  output_generator.py  risk_analysis.py  scenarios.py
ElipsFinancialPlanner/tests/: __init__.py  conftest.py  test_config.py  test_data_loader.py  test_financial_planner.py  test_scenarios.py
